# Steam-Uploader

./: .clang-format  .gitignore  .~lock.Enums.ods#  BUILDING.md  CMakeLists.txt  CMakePresets.json  Enums.ods  ExecCmd.h  README.md  Uploader.cpp  Uploader.h  WarningHook.cpp  app  build.sh  compil_uploader.sh  makefile  run_app.sh  steam_uploader.cpp  test.sh  vcpkg.json
.github/workflows/: build.yml  release.yml
TestUpload/: description.txt  helloworld.txt
cmake/: steamworks_sdk.cmake
cmake/cpm/: curl.cmake  cxxopts.cmake  nlohmann_json.cmake  spdlog.cmake  steamworks_sdk.cmake
include/steam/: isteamcontroller.h  isteammatchmaking.h  isteammusicremote.h  isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  isteamremoteplay.h  isteamremotestorage.h  isteamugc.h  isteamuserstats.h  isteamutils.h  steam_api.h  steam_api_common.h  steam_gameserver.h  steamnetworkingtypes.h
src/: Uploader.cpp  Uploader.h  WarningHook.h  app  main.cpp  steam_uploader.cpp
src/Enum/: EItemUpdateStatus.h  EResult.h
src/Util/: AppID.cpp  AppID.h  EResult.h  ExecCmd.h  HasLanguage.h  ReadFile.cpp  ReadFile.h  Updater.h  WarningHook.cpp
